# tasker

./: README.md  setup.cfg  setup.py
src/tasker/: util.py  version.py
src/tasker/cli/: check_off_tasks.py  reminder_tasks.py  todays_schedule.py  weeks_schedule_preview.py
src/tasker/database/: __init__.py  database.py  day.py  task.py
src/tasker/schedule/: __init__.py  schedule.py  task.py
