[metadata]
name = tasker
author = Tyler Westland
author-email = tylerofthewest@gmail.com
url = https://github.com/I-question-this/tasker
description = Improves interactions with Task Warrior
long-description = file: README.md, LICENSE
license = GNU General Public License, Version 3.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.9
install_requires =
  python-dateutil >= 2.8.0
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

